--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@layouts/BlogPost.astro'
+import Layout from '@layouts/SimpleLayout.astro'
 ---
 
 <Layout
@@ -8,18 +8,7 @@ import Layout from '@layouts/BlogPost.astro'
     pubDate={new Date('August 08 2021')}
     heroImage="/blog-placeholder-about.jpg"
 >
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-        integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu
-        turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-        adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus
-        sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget
-        magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius
-        sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-        sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque
-        sagittis purus sit amet.
-    </p>
+    <h3 class="wrapper">principal element:</h3>
 
     <p>
         Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
@@ -33,7 +22,7 @@ import Layout from '@layouts/BlogPost.astro'
         bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus
         urna et pharetra pharetra massa massa ultricies mi.
     </p>
-
+    <!-- 
     <p>
         Mollis nunc sed id semper risus in. Convallis a cras semper auctor
         neque. Diam sit amet nisl suscipit. Lacus viverra vitae congue eu
@@ -71,5 +60,5 @@ import Layout from '@layouts/BlogPost.astro'
         ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper
         feugiat nibh sed pulvinar proin gravida. Egestas integer eget aliquet
         nibh praesent tristique magna.
-    </p>
+    </p> -->
 </Layout>
