--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import { SITE_TITLE } from '../consts'
             <HeaderLink href="/blog">Blog</HeaderLink>
             <HeaderLink href="/about">About</HeaderLink>
             <HeaderLink href="/test">Test</HeaderLink>
+            <HeaderLink href="/mytest">mytest</HeaderLink>
         </div>
         <div class="social-links">
             <a href="https://m.webtoo.ls/@astro" target="_blank">
