--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -2,66 +2,128 @@
 import Layout from '@layouts/SimpleLayout.astro'
 ---
 
+<!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout
-    title="About Me"
+    title="test Me"
     description="Lorem ipsum dolor sit amet"
     pubDate={new Date('August 08 2021')}
-    heroImage="/blog-placeholder-about.jpg"
 >
     <div class="stack">
-        <h3 class="wrapper">principal element:</h3>
+        <div class="box">
+            <h4>stack box</h4>
 
-        <p class="wrapper">
-            Morbi tristique senectus et netus. Id semper risus in hendrerit
-            gravida rutrum quisque non tellus. Habitasse platea dictumst quisque
-            sagittis purus sit amet. Tellus molestie nunc non blandit massa.
-            Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut.
-            Fringilla urna porttitor rhoncus dolor. Elit ullamcorper dignissim
-            cras tincidunt lobortis. In cursus
-        </p>
-        <div class="wrapper">
-            <ul>
-                <li>xxx</li>
-                <li>xxx</li>
-                <li>xxx</li>
-                <li>xxx</li>
-            </ul>
+            <p>
+                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Vitae ultricies leo integer malesuada nunc vel risus commodo
+                viverra.
+            </p>
         </div>
 
-        <p class="wrapper">
-            Morbi tristique senectus et netus. Id semper risus in hendrerit
-            gravida rutrum quisque non tellus. Habitasse platea dictumst quisque
-            sagittis purus sit amet. Tellus molestie nunc non blandit massa.
-            Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut.
-            Fringilla urna porttitor rh
-        </p>
+        <div class="box center-l">
+            <h4>box level2</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
+                adipisci officia saepe debitis nihil tempora quod nam odit
+                magnam doloremque pariatur molestias possimus non tenetur cum
+                distinctio dolores repudiandae modi?
+            </p>
 
-        <h3>quisque sagittis purus sit amet.</h3>
-        <p class="wrapper">
-            Morbi tristique senectus et netus. Id semper risus in hendrerit
-            gravida rutrum quisque non tellus. Habitasse platea dictumst quisque
-            sagittis purus sit amet. Tellus molestie nunc non blandit massa.
-            Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut.
-            Fringilla urna porttitor rhoncus dolor. Elit ullamcorper dignissim
-            cras tincidunt lobortis. In cursus
-        </p>
-        <p class="wrapper">
-            turpis massa tincidunt dui ut ornare lectus. Integer feugiat
-            scelerisque varius morbi enim nunc. Bibendum neque egestas congue
-            quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-            bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed
-            tempus urna et pharetra pharetra massa massa ultricies mi.
-        </p>
+            <buton type="button" class="button">button</buton>
+        </div>
+
+        <div class="box center-l">
+            <h4>box level2</h4>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+            <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
+        </div>
+
+        <div class="box">
+            boxipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies
+            leo integer malesuada nunc vel risus commodo viverra.
+
+            <div class="box">
+                <h4>box level2</h4>
+                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
+            </div>
+            <div class="box">
+                <h4>box level2</h4>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+                <p>
+                    Sagittis purus sit amet volutpat. Netus et malesuada fames
+                    ac
+                </p>
+            </div>
+        </div>
+        <div class="box">
+            box ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
+            ultricies leo integer malesuada nunc vel risus commodo viverra.
+
+            <div class="box">
+                <h4>box level2</h4>
+                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
+            </div>
+            <div class="box">
+                <h4>box level2</h4>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+                <p>
+                    Sagittis purus sit amet volutpat. Netus et malesuada fames
+                    ac
+                </p>
+            </div>
+        </div>
     </div>
 
-    <!-- 
-    <p class='wrapper'>
-        Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi
-        tempus imperdiet. Id porta nibh venenatis cras sed felis eget velit.
-        Ipsum a arcu cursus vitae. Facilisis magna etiam tempor orci eu lobortis
-        elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-        ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper
-        feugiat nibh sed pulvinar proin gravida. Egestas integer eget aliquet
-        nibh praesent tristique magna.
-    </p> -->
+    <div class="stack-large">
+        <div class="box">
+            <h4>stack-large box</h4>
+            <p>
+                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Vitae ultricies leo integer malesuada nunc vel risus commodo
+                viverra.
+            </p>
+            <p>
+                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
+                turpis egestas. Eget magna fermentum iaculis eu non diam
+                phasellus vestibulum lorem. Varius sit amet mattis vulputate
+                enim. Habitasse platea dictumst quisque sagittis. Integer quis
+                auctor elit sed vulputate mi. Dictumst quisque sagittis purus
+                sit amet.
+            </p>
+        </div>
+    </div>
+    <div class="stack-small">
+        <div class="stack-small box">
+            <h4>box</h4>
+            <p>
+                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Vitae ultricies leo integer malesuada nunc vel risus commodo
+                viverra.
+            </p>
+            <p>
+                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
+                turpis egestas. Eget magna fermentum iaculis eu non diam
+                phasellus vestibulum lorem. Varius sit amet mattis vulputate
+                enim. Habitasse platea dictumst quisque sagittis. Integer quis
+                auctor elit sed vulputate mi. Dictumst quisque sagittis purus
+                sit amet.
+            </p>
+        </div>
+    </div>
 </Layout>
