--- a/src/pages/mytest.astro
+++ b/src/pages/mytest.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
 import SideBarDemo from '@components/SideBarDemo.astro'
+import Switcher from '@components/Switcher.astro'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
@@ -10,6 +11,8 @@ import SideBarDemo from '@components/SideBarDemo.astro'
     pubDate={new Date('August 08 2021')}
 >
     <!-- <Cluster /> -->
-    <div class="box"><h1>Side Bar Demo</h1></div>
-    <SideBarDemo />
+    <!-- <div class="box"><h1>Side Bar Demo</h1></div>
+    <SideBarDemo /> -->
+    <!-- <div class="box"><h1>Switcher Demo</h1></div> -->
+    <Switcher />
 </Layout>
