--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -304,4 +304,11 @@ import 'open-props/postcss/buttons'
             flex-wrap: wrap;
         }
     }
+
+    .centered {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 </style>
