--- a/src/components/Switcher.astro
+++ b/src/components/Switcher.astro
@@ -1,3 +1,12 @@
+---
+
+---
+
+<h1>Switcher</h1>
+<p>
+    especially useful where each element should be considered equal, or part of
+    a continuum.
+</p>
 <div class="switcher">
     <div class="box">5</div>
     <div class="box">4</div>
