--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,42 @@
 ---
+import Layout from '@layouts/SimpleLayout.astro'
 import BaseHead from '@components/BaseHead.astro'
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 ---
 
-<!doctype html>
-<html lang="en">
-    <head>
-        <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    </head>
-    <body>
+<Layout title="home" description="testing css">
+    <div class="cover">
         <Header title={SITE_TITLE} />
-        <main></main>
+        <h1>hello</h1>
+
         <Footer />
-    </body>
-</html>
+    </div>
+</Layout>
+
+<style>
+    .cover {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        padding: 1rem;
+        min-block-size: 100vh;
+        background-color: red;
+        > h1 {
+            margin-block: auto;
+        }
+        > :first-child:not(h1) {
+            margin-block-start: 0;
+        }
+        > :last-child:not(h1) {
+            margin-block-end: 0;
+        }
+    }
+
+    .cover > * {
+        margin-block: 1rem;
+    }
+</style>
