--- a/src/components/customComponents/Center/index.astro
+++ b/src/components/customComponents/Center/index.astro
@@ -7,7 +7,7 @@ type Props = {
 }
 
 const {
-    max = '60',
+    max = 'var(--measure)',
     andText = false,
     gutters = 0,
     intrinsic = false,
