--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,18 +3,16 @@ import Layout from '@layouts/SimpleLayout.astro'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout
-    title="About Me"
-    description="Lorem ipsum dolor sit amet"
-    pubDate={new Date('August 08 2021')}
->
+<Layout title="About Me" description="Lorem ipsum dolor sit amet">
     <div class="stack">
-        <div class="box center">
-            <h4>stack box</h4>
-            <code> class="box center"</code>
-            STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-            integer malesuada nunc vel risus commodo viverra.
+        <div class="box">
+            <div class="box">
+                <h4>stack box</h4>
+                <code> class="box center"</code>
+                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
+                ultricies leo integer malesuada nunc vel risus commodo viverra.
+            </div>
 
             <div class="box">
                 <h4>box level2</h4>
@@ -45,79 +43,29 @@ import Layout from '@layouts/SimpleLayout.astro'
                 <h4>box level2</h4>
                 Sagittis purus sit amet volutpat. Netus et malesuada fames ac
             </div>
-            <div class="box">
-                <h4>box level2</h4>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
-                <p>
-                    Sagittis purus sit amet volutpat. Netus et malesuada fames
-                    ac
-                </p>
-            </div>
+            <h4>box level2</h4>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+            <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
         </div>
         <div class="box">
             box ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
             ultricies leo integer malesuada nunc vel risus commodo viverra.
 
-            <div class="box">
-                <h4>box level2</h4>
-                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-            </div>
-            <div class="box">
-                <h4>box level2</h4>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
-                <p>
-                    Sagittis purus sit amet volutpat. Netus et malesuada fames
-                    ac
-                </p>
-            </div>
-        </div>
-    </div>
+            <h4>box level2</h4>
+            Sagittis purus sit amet volutpat. Netus et malesuada fames ac
 
-    <div class="stack-large">
-        <div class="box">
-            <h4>stack-large box</h4>
-            <p>
-                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Vitae ultricies leo integer malesuada nunc vel risus commodo
-                viverra.
-            </p>
-            <p>
-                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-                turpis egestas. Eget magna fermentum iaculis eu non diam
-                phasellus vestibulum lorem. Varius sit amet mattis vulputate
-                enim. Habitasse platea dictumst quisque sagittis. Integer quis
-                auctor elit sed vulputate mi. Dictumst quisque sagittis purus
-                sit amet.
-            </p>
-        </div>
-    </div>
-    <div class="stack-small">
-        <div class="stack-small box">
-            <h4>box</h4>
-            <p>
-                STACK 1 ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Vitae ultricies leo integer malesuada nunc vel risus commodo
-                viverra.
-            </p>
-            <p>
-                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-                turpis egestas. Eget magna fermentum iaculis eu non diam
-                phasellus vestibulum lorem. Varius sit amet mattis vulputate
-                enim. Habitasse platea dictumst quisque sagittis. Integer quis
-                auctor elit sed vulputate mi. Dictumst quisque sagittis purus
-                sit amet.
-            </p>
+            <h4>xxx</h4>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ul>
+            <p>Sagittis purus sit amet volutpat. Netus et malesuada fames ac</p>
         </div>
     </div>
 </Layout>
