--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,42 +1,16 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import BaseHead from '@components/BaseHead.astro'
-import Header from '@components/Header.astro'
-import Footer from '@components/Footer.astro'
+
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+import Dialogbox from '@components/Dialouge.astro'
+import AstroBox from '@components/customComponents/Box/index.astro'
+// import type { removeEmitHelper } from 'typescript'
 ---
 
 <Layout title="home" description="testing css">
-    <div class="cover">
-        <Header title={SITE_TITLE} />
-        <h1>hello</h1>
+    <div class="stack">
+        <h1>xxxx</h1>
 
-        <Footer />
+        <Dialogbox />
     </div>
 </Layout>
-
-<style>
-    .cover {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-        padding: 1rem;
-        min-block-size: 100vh;
-        background-color: red;
-        > h1 {
-            margin-block: auto;
-        }
-        > :first-child:not(h1) {
-            margin-block-start: 0;
-        }
-        > :last-child:not(h1) {
-            margin-block-end: 0;
-        }
-    }
-
-    .cover > * {
-        margin-block: 1rem;
-    }
-</style>
