--- a/src/pages/mytest.astro
+++ b/src/pages/mytest.astro
@@ -5,11 +5,7 @@ import Switcher from '@components/Switcher.astro'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout
-    title="test Me"
-    description="Lorem ipsum dolor sit amet"
-    pubDate={new Date('August 08 2021')}
->
+<Layout title="test Me" description="Lorem ipsum dolor sit amet">
     <!-- <Cluster /> -->
     <!-- <div class="box"><h1>Side Bar Demo</h1></div>
     <SideBarDemo /> -->
