--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,57 +3,26 @@ import HeaderLink from './HeaderLink.astro'
 import { SITE_TITLE } from '../consts'
 ---
 
-<header>
-    <nav>
-        <h2><a href="/">{SITE_TITLE}</a></h2>
-        <div class="internal-links">
+<header class="box">
+    <div class="center">
+        <div class="box">
+            <h2>
+                <a href="/">{SITE_TITLE}</a>
+            </h2>
+        </div>
+
+        <div class="switcher">
             <HeaderLink href="/">Home</HeaderLink>
             <HeaderLink href="/blog">Blog</HeaderLink>
             <HeaderLink href="/about">About</HeaderLink>
             <HeaderLink href="/test">Test</HeaderLink>
             <HeaderLink href="/mytest">mytest</HeaderLink>
         </div>
-    </nav>
+    </div>
 </header>
 <style>
-    header {
-        margin: 0;
-        padding: 0 1em;
-        background: white;
-        box-shadow: 0 2px 8px rgba(var(--black), 5%);
-    }
-    h2 {
-        margin: 0;
-        font-size: 1em;
-        a,
-        a.active {
-            text-decoration: none;
-        }
-    }
-
-    nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        a {
-            padding: 1em 0.5em;
-            color: var(--black);
-            border-bottom: 4px solid transparent;
-            text-decoration: none;
-            &.active {
-                text-decoration: none;
-                border-bottom-color: var(--accent);
-            }
-        }
-    }
-
-    .social-links,
-    .social-links a {
-        display: flex;
-    }
-    @media (max-width: 720px) {
-        .social-links {
-            display: none;
-        }
+    .switcher {
+        --threshold: 30rem;
+        --space: 1rem;
     }
 </style>
