--- a/src/pages/everylayout/cluster.astro
+++ b/src/pages/everylayout/cluster.astro
@@ -14,11 +14,7 @@ const classstring = `.cluster {
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout
-    title="About Me"
-    description="Lorem ipsum dolor sit amet"
-    pubDate={new Date('August 08 2021')}
->
+<Layout title="About Me" description="Lorem ipsum dolor sit amet">
     <div class="box border">
         <pre><code>{classstring}</code></pre>
     </div>
