--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -6,11 +6,36 @@ import 'open-props/postcss/buttons'
 <style is:global>
     * {
         box-sizing: border-box;
+        margin: 0;
+        padding: auto;
+        overflow-wrap: break-word;
+        border: 0 solid;
+    }
+
+    html,
+    body,
+    div,
+    header,
+    nav,
+    main,
+    footer {
+        max-inline-size: none;
+    }
+
+    .max-inline-size\:measure {
+        max-inline-size: var(--measure);
+    }
+
+    .max-inline-size\:measure\/2 {
+        max-inline-size: calc(var(--measure) / 2);
     }
 
     html {
         font-family: var(--font-sans);
         line-height: 1.5;
+
+        --color-light: hsl(0, 0%, 80%);
+        --color-dark: hsl(0, 0%, 20%);
 
         /* light */
         --brand-light: var(--orange-18);
@@ -81,6 +106,8 @@ import 'open-props/postcss/buttons'
     }
 
     :root {
+        --measure: 60ch;
+
         --ratio: 1.5;
         --s-5: calc(var(--s-4) / var(--ratio));
         --s-4: calc(var(--s-3) / var(--ratio));
@@ -229,15 +256,33 @@ import 'open-props/postcss/buttons'
         margin-block-end: auto;
     }
 
+    /* end stack */
+
+    /* 
+    The Box element should have padding on all sides, or no sides at all. 
+    Why? Because an element with specific (and asymmetrical) padding is not a Box; 
+    
+    always use a border or outline 
+    
+    a border or background
+    
+    
+    */
     .box {
-        padding: var(--size-3);
+        padding: 0;
+
+        --color-light: hsl(0, 0%, 80%);
+        --color-dark: hsl(0, 0%, 20%);
+        color: var(--color-dark);
+        /* border-width: var(--border-size-1);
+        border-color: var(--color-dark); */
+
+        background-color: var(--color-light);
 
         /* color: var(--gray-1);
         background-color: var(--gray-12); */
-        outline: 0.125rem solid transparent;
-        outline-offset: -0.125rem;
-        background-color: var(--gray-1);
-        border: var(--size-1) solid var(--gray-12);
+        outline: 0.125rem solid;
+        outline-offset: -0.125rem transparent;
     }
     /* BOX */
     .box * {
@@ -250,12 +295,20 @@ import 'open-props/postcss/buttons'
 
     /* CENTER  Intrinsic centering*/
 
-    .center-l {
+    .center {
+        /* measurement of the content is critica */
         box-sizing: content-box;
-        max-inline-size: 60ch;
         margin-inline: auto;
-        padding-inline-start: var(--s1);
-        padding-inline-end: var(--s1);
+        max-inline-size: var(--measure);
+        /* text align center */
+        /* text-align: center;
+        max-inline-size: var(--measure); */
+        /* Intrinsic centering?
+        Whether to center and child elements narrower than the max value */
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .cluster {
@@ -298,17 +351,68 @@ import 'open-props/postcss/buttons'
             position: relative;
             /*     inset-block-start: 2px; */
         }
-
-        .switcher {
-            display: flex;
-            flex-wrap: wrap;
-        }
     }
 
-    .centered {
+    .showcode {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        font-size: xx-small;
+    }
+
+    /* COVER */
+
+    .cover {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        min-block-size: 100vh;
+        padding: 1rem;
+
+        > main {
+            margin-block: auto;
+        }
+        > :first-child:not(main) {
+            margin-block-start: 0;
+        }
+        > :last-child:not(main) {
+            margin-block-end: 0;
+        }
+    }
+    /* 
+    Notice how we use margin-block: 1rem and not margin: 1rem 0.
+     The reason is that this component only cares about the vertical margins to achieve its layout.
+      By making the inline (horizontal in the default writing mode) margins 0, 
+      we might be unduly undoing styles applied or inherited by an ancestor component. */
+    .cover > * {
+        margin-block: 1rem;
+    }
+
+    .switcher {
+        display: flex;
+        flex-wrap: wrap;
+        gap: var(--size-5);
+    }
+
+    .switcher > * {
+        flex-grow: 1;
+        flex-basis: calc((--var(--size-15)- 100%) * 999);
+    }
+
+    .switcher > :nth-last-child(n + 6),
+    .switcher > :nth-last-child(n + 6) ~ * {
+        flex-basis: 100%;
+    }
+
+    .sr-only {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border-width: 0;
     }
 </style>
