fix box outline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import AstroBox from '@components/customComponents/Box/index.astro'
 
 <Layout title="home" description="testing css">
     <div class="stack">
-        <h1>xxxx</h1>
+        <div class="box"><h1>xxxx</h1></div>
 
         <Dialogbox />
     </div>
