--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from '@layouts/SimpleLayout.astro'
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
-    <div class="stack">
+    <div class="stack-large">
         <div class="box">
             <div class="box">
                 <h4>stack box</h4>
@@ -14,12 +14,14 @@ import Layout from '@layouts/SimpleLayout.astro'
                 ultricies leo integer malesuada nunc vel risus commodo viverra.
             </div>
 
-            <div class="box">
-                <h4>box level2</h4>
-                Sagittis purus sit amet volutpat. Netus et malesuada fames ac
-            </div>
+            <div class="stack-small">
+                <div class="box">
+                    <h4>box level2</h4>
+                    Sagittis purus sit amet volutpat. Netus et malesuada fames ac
+                </div>
 
-            <buton type="button" class="button">button</buton>
+                <buton type="button" class="button center">button</buton>
+            </div>
 
             <div class="box">
                 <h4>box level2</h4>
