--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,24 +8,21 @@ const posts = (await getCollection('blog')).sort(
 )
 ---
 
-<Layout title="test Me" description="Lorem ipsum dolor sit amet">
-    <div class="stack">
-        <div class="my-box"><h4>blog post</h4></div>
-        <div class="my-box">
-            <div class="my-switcher">
-                {
-                    posts.map((post) => (
-                        <div class="box">
-                            <a href={`/blog/${post.slug}/`}>
-                                <h4 class="title">{post.data.title}</h4>
-                                <p class="date">
-                                    <FormattedDate date={post.data.pubDate} />
-                                </p>
-                            </a>
-                        </div>
-                    ))
-                }
-            </div>
+<Layout title="blog post" description="Lorem ipsum dolor sit amet">
+    <div class="my-box">
+        <div class="my-switcher">
+            {
+                posts.map((post) => (
+                    <div class="box">
+                        <a href={`/blog/${post.slug}/`}>
+                            <h4 class="title">{post.data.title}</h4>
+                            <p class="date">
+                                <FormattedDate date={post.data.pubDate} />
+                            </p>
+                        </a>
+                    </div>
+                ))
+            }
         </div>
     </div>
 </Layout>
