--- a/src/components/Switcher.astro
+++ b/src/components/Switcher.astro
@@ -8,18 +8,18 @@
     a continuum.
 </p>
 <div class="switcher">
-    <div class="box">5</div>
-    <div class="box">4</div>
-    <div class="box">3</div>
-    <div class="box">2</div>
-    <div class="box">1</div>
+    <div class="box wrapper">5</div>
+    <div class="box wrapper">4</div>
+    <div class="box wrapper">3</div>
+    <div class="box wrapper">2</div>
+    <div class="box wrapper">1</div>
 </div>
 
 <style>
     .switcher {
         display: flex;
         flex-wrap: wrap;
-        gap: 1rem;
+        gap: var(--s1);
         --threshold: 30rem;
 
         /* optional */
@@ -33,5 +33,9 @@
         > :nth-last-child(n + 5) ~ * {
             flex-basis: 100%;
         }
+    }
+
+    .wrapper {
+        border: var(--border-size-1) solid var(--orange-18);
     }
 </style>
